--- a/build
+++ b/build
@@ -1,1 +1,6 @@
-i686-elf-as boot.s -o boot.o && i686-elf-gcc -c kernel.c -o kernel.o -std=gnu99 -ffreestanding -O2 -Wall -Wextra && i686-elf-gcc -T linker.ld -o myos.bin -ffreestanding -O2 -nostdlib boot.o kernel.o -lgcc && grub-file --is-x86-multiboot myos.bin && ./makeiso
+i686-elf-as boot.s -o boot.o
+i686-elf-g++ -c kernel.c++ -o kernel.o -ffreestanding -O2 -Wall -Wextra -fno-exceptions -fno-rtti
+i686-elf-g++ -T linker.ld -o myos.bin -ffreestanding -O2 -nostdlib boot.o kernel.o -lgcc
+grub-file --is-x86-multiboot myos.bin
+./makeiso
+qemu-system-i386 -cdrom myos.iso
