--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,33 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": []
-}
+    "configurations": [
+      {
+        "name": "Debug Kernel with GDB",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/kernel/kernel.bin", 
+        "cwd": "${workspaceFolder}",
+        // GDB will attach to the QEMU gdbserver
+        "MIMode": "gdb",
+        "miDebuggerPath": "gdb",   // or your cross-compiler gdb path
+        "miDebuggerArgs": "", 
+        // This is the key: connecting to QEMU at port 1234
+        "debugServerPath": "",
+        "debugServerArgs": "",
+        "targetArchitecture": "x86",
+        "externalConsole": false,
+        "setupCommands": [
+          {
+            "description": "Enable pretty-printing",
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": true
+          }
+        ],
+        // Tells VSCode to connect to GDB remote at localhost:1234
+        "MIDebuggerServerAddress": "localhost:1234",
+        "environment": [],
+        "stopAtEntry": false
+      }
+    ]
+  }
+  
